--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "tutorial-1",
   "version": "1.0.0",
-  "description": "",
   "main": "01_intro_globals.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -16,5 +15,6 @@
   },
   "dependencies": {
     "express": "^4.18.2"
-  }
+  },
+  "description": ""
 }
